Situación ingeniería civil , realizado por Emily Villalba

--- a/Situaciones_Agro_S_1.ipynb
+++ b/Situaciones_Agro_S_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNS48qqOu6aHSfGjmiv4PpN",
+      "authorship_tag": "ABX9TyO+YjxfSVWiStWLAKlMcgUs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,6 +261,67 @@
         "11. `print(\"La densidad de siembra recomendada es de\", densidad_siembra, \"kilogramos por hectárea.\")`: Esta línea muestra el resultado del cálculo de la \"densidad de siembra\". **Sin embargo, debido al error en el cálculo de la línea 9, este resultado no representa la cantidad total de semilla necesaria para el lote, sino la densidad multiplicada por el área en metros cuadrados, lo cual no tiene una interpretación práctica en este contexto.** Debería mostrar la cantidad total de semilla calculada correctamente.\n",
         "\n",
         "**Sugerencia de mejora:** Para que el programa sea más útil, corrige la línea 9 para calcular la cantidad total de semilla necesaria para el lote en kilogramos, teniendo en cuenta la conversión de metros cuadrados a hectáreas, y ajusta la línea 11 para mostrar este resultado correctamente."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Situación de Interés en Ingeniería Civil\n",
+        "\n",
+        "Un ingeniero residente de obra necesita calcular\n",
+        "rápidamente el volumen de concreto necesario para vaciar una losa de piso rectangular simple. Debe poder ingresar el largo, el ancho y el espesor de la losa para obtener el volumen en metros cúbicos.\n"
+      ],
+      "metadata": {
+        "id": "DVuNaeAe5pZX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Presentar la herramienta al usuario.\n",
+        "print(\"Bienvenido al calculador de volumen de concreto.\")\n",
+        "\n",
+        "# 2. Solicitar el largo, ancho y espesor de la losa, todos en metros (input).\n",
+        "largo = float(input(\"Ingrese el largo de la losa en metros: \"))\n",
+        "ancho = float(input(\"Ingrese el ancho de la losa en metros: \"))\n",
+        "espesor = float(input(\"Ingrese el espesor de la losa en metros: \"))\n",
+        "\n",
+        "# 3. Convertir todas las entradas a números decimales (float).\n",
+        "largo = float(largo)\n",
+        "ancho = float(ancho)\n",
+        "espesor = float(espesor)\n",
+        "\n",
+        "# 4. Calcular el volumen de la losa (largo * ancho * espesor).\n",
+        "volumen = largo * ancho * espesor\n",
+        "\n",
+        "# 5. Presentar el volumen calculado en metros cúbicos.\n",
+        "print(f\"El volumen de la losa es : {volumen:.2f}m3\")\n"
+      ],
+      "metadata": {
+        "id": "VbOzh53K53N6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "84bfeacb"
+      },
+      "source": [
+        "Aquí tienes la explicación línea por línea del código de la celda actual:\n",
+        "\n",
+        "1.  `print(\"Bienvenido al calculador de volumen de concreto.\")`: Esta línea imprime un mensaje de bienvenida al usuario, indicando el propósito del programa.\n",
+        "2.  `largo = float(input(\"Ingrese el largo de la losa en metros: \"))`: Esta línea solicita al usuario que ingrese el largo de la losa en metros. La función `input()` lee la entrada como texto, y `float()` la convierte inmediatamente a un número decimal. El resultado se almacena en la variable `largo`.\n",
+        "3.  `ancho = float(input(\"Ingrese el ancho de la losa en metros: \"))`: Similar a la línea anterior, esta línea pide al usuario que ingrese el ancho de la losa en metros, convierte la entrada a un número decimal y lo almacena en la variable `ancho`.\n",
+        "4.  `espesor = float(input(\"Ingrese el espesor de la losa en metros: \"))`: Esta línea solicita al usuario que ingrese el espesor de la losa en metros, convierte la entrada a un número decimal y lo almacena en la variable `espesor`.\n",
+        "5.  `largo = float(largo)`: Esta línea **vuelve a convertir** la variable `largo` a un número decimal. Como ya se hizo en la línea 2, esta conversión es redundante y no es necesaria.\n",
+        "6.  `ancho = float(ancho)`: Similarmente, esta línea **vuelve a convertir** la variable `ancho` a un número decimal, lo cual también es redundante.\n",
+        "7.  `espesor = float(espesor)`: Y esta línea **vuelve a convertir** la variable `espesor` a un número decimal, también de forma redundante.\n",
+        "8.  `volumen = largo * ancho * espesor`: Esta línea calcula el volumen de la losa multiplicando el largo, el ancho y el espesor. El resultado se almacena en la variable `volumen`.\n",
+        "9.  `print(f\"El volumen de la losa es : {volumen:.2f}m3\")`: Esta línea muestra el resultado al usuario. Utiliza un f-string para incluir el valor de la variable `volumen` directamente en la cadena. El `: .2f` dentro de las llaves `{}` formatea el número decimal para que tenga solo dos dígitos después del punto decimal.\n",
+        "\n",
+        "**Sugerencia de mejora:** Las líneas 5, 6 y 7 son redundantes ya que la conversión a `float` ya se realizó en las líneas 2, 3 y 4 respectivamente. Podrías eliminar esas tres líneas para hacer el código un poco más limpio."
       ]
     }
   ]
